# nemesis

./: .env.example  .gitignore  ARCHITECTURAL_ANALYSIS.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REPORT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Nemesis_Logging_Analysis_Report.md  PHASE1_CLEAN_ARCHITECTURE_VERIFICATION.md  PHASE2_PERFORMANCE_METRICS_ATTRIBUTES.md  PHASE3_CONSOLE_NETWORK_LOGS_READABILITY.md  PHASE4_SCENARIO_INDEPENDENCE.md  PHASE5_POSTBANK_CODE_QUALITY.md  PHASE6_STACK_TRACE_ERROR_ENHANCEMENT.md  REFACTORING_PLAN.md  REPORTPORTAL_ANALYSIS.md  REPORTPORTAL_CODE_REVIEW_PLAN.md  REPORTPORTAL_LIBRARIES_EXPLANATION.md  TASK10_INTEGRATION_HOOKS_ANALYSIS.md  TASK1_LAUNCH_LIFECYCLE_ANALYSIS.md  TASK2_FEATURE_LIFECYCLE_ANALYSIS.md  TASK3_SCENARIO_LIFECYCLE_ANALYSIS.md  TASK4_STEP_LIFECYCLE_ANALYSIS.md  TASK5_CONFIGURATION_MANAGEMENT_ANALYSIS.md  TASK6_ERROR_HANDLING_ANALYSIS.md  TASK7_CLIENT_INITIALIZATION_ANALYSIS.md  TASK8_ASYNC_QUEUE_TERMINATION_ANALYSIS.md  TASK9_DATA_FLOW_STATE_MANAGEMENT_ANALYSIS.md  dod.md  task.md  test_enhanced_action_logging.py
Nemesis/: .gitignore  .sonarcloud.properties  01_Code_Complexity_2025-11-04_11-11-48.txt  02_Code_Smells_2025-11-04_11-11-48.txt  03_Bugs_2025-11-04_11-11-48.txt  CHANGELOG.md  CLI_REFACTORING_PLAN.md  INTEGRATION_GUIDE.md  MANIFEST.in  README.md  README_NEW.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
Nemesis/.github/workflows/: sonarcloud.yml
Nemesis/docs/: SONARQUBE_SETUP.md
Nemesis/scripts/: generate_sonar_reports.py  run_sonar.sh
(+549 files in other folders)
