[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemesis-automation"
version = "1.0.0"
description = "BDD Test Automation Framework with Behave & Playwright"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "behave>=1.2.6",
    "playwright>=1.40.0",
    "behave-reportportal>=5.0.0",
    "reportportal-client>=5.5.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.32.3",
    "urllib3>=1.21.1",
    "imageio-ffmpeg>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "black>=24.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0"
]

[project.scripts]
nemesis = "nemesis.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nemesis" = ["templates/*.yaml", "templates/*.ini"]


[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
